Started with Powerpoint Presentation

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "### Multivariate Gaussian \n",
     "A multivariate gaussian distribution/ normal distribution is defined as\n",
-    "$$ \\mathcal{N}(x,\\mu,\\Sigma) = \\frac{1}{\\left[(2 * \\pi)^d * det(\\Sigma)\\right]^{1/2}} * \\exp{\\left(-\\frac{1}{2} (x-\\mu)^T \\Sigma^-1 (x-\\mu) \\right)}$$\n",
+    "$$ \\mathcal{N}(x,\\mu,\\Sigma) = \\frac{1}{\\left[(2 * \\pi)^d * det(\\Sigma)\\right]^{1/2}} * \\exp{\\left(-\\frac{1}{2} (x-\\mu)^T \\Sigma^{-1} (x-\\mu) \\right)}$$\n",
     "where $\\mu$ is the vecotor of mean values, $\\Sigma$ is the covariance matrix containing the standard deviations on the diagonal and the \"correlations\" on the offdiagonals, $d$ is the dimension of $\\mu$  \n"
    ]
   },
